Fix sidebar alignment

--- a/docs/src/.vuepress/styles/index.scss
+++ b/docs/src/.vuepress/styles/index.scss
@@ -1,7 +1,7 @@
 // place your custom styles here
 button.sidebar-heading {
   font-size: 1em;
-  padding-inline-start: 1rem;
+  //padding-inline-start: 1rem;
 }
 
 #main-title {
